--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ ul li a{
 /* end of header */
 #hero{
     padding-top: 80px;
-    background-image: url(wp4375797-audi-rs-wallpapers.jpg );
+    background-image: url(audi_matte.jpg);
     background-size: cover;
     background-position: top center;
     position: relative;
